; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_erp.c_zfcp_erp_port_forced_strategy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_erp.c_zfcp_erp_port_forced_strategy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zfcp_erp_action = type { i32, %struct.zfcp_port* }
%struct.zfcp_port = type { i32 }

@ZFCP_STATUS_PORT_PHYS_OPEN = common dso_local global i32 0, align 4
@ZFCP_STATUS_COMMON_OPEN = common dso_local global i32 0, align 4
@ZFCP_ERP_FAILED = common dso_local global i32 0, align 4
@ZFCP_ERP_SUCCEEDED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.zfcp_erp_action*)* @zfcp_erp_port_forced_strategy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfcp_erp_port_forced_strategy(%struct.zfcp_erp_action* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.zfcp_erp_action*, align 8
  %4 = alloca %struct.zfcp_port*, align 8
  %5 = alloca i32, align 4
  store %struct.zfcp_erp_action* %0, %struct.zfcp_erp_action** %3, align 8
  %6 = load %struct.zfcp_erp_action*, %struct.zfcp_erp_action** %3, align 8
  %7 = getelementptr inbounds %struct.zfcp_erp_action, %struct.zfcp_erp_action* %6, i32 0, i32 1
  %8 = load %struct.zfcp_port*, %struct.zfcp_port** %7, align 8
  store %struct.zfcp_port* %8, %struct.zfcp_port** %4, align 8
  %9 = load %struct.zfcp_port*, %struct.zfcp_port** %4, align 8
  %10 = getelementptr inbounds %struct.zfcp_port, %struct.zfcp_port* %9, i32 0, i32 0
  %11 = call i32 @atomic_read(i32* %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.zfcp_erp_action*, %struct.zfcp_erp_action** %3, align 8
  %13 = getelementptr inbounds %struct.zfcp_erp_action, %struct.zfcp_erp_action* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  switch i32 %14, label %40 [
    i32 128, label %15
    i32 129, label %32
  ]

15:                                               ; preds = %1
  %16 = load %struct.zfcp_port*, %struct.zfcp_port** %4, align 8
  %17 = call i32 @zfcp_erp_port_strategy_clearstati(%struct.zfcp_port* %16)
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @ZFCP_STATUS_PORT_PHYS_OPEN, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %30

22:                                               ; preds = %15
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @ZFCP_STATUS_COMMON_OPEN, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %22
  %28 = load %struct.zfcp_erp_action*, %struct.zfcp_erp_action** %3, align 8
  %29 = call i32 @zfcp_erp_port_forced_strategy_close(%struct.zfcp_erp_action* %28)
  store i32 %29, i32* %2, align 4
  br label %42

30:                                               ; preds = %22, %15
  %31 = load i32, i32* @ZFCP_ERP_FAILED, align 4
  store i32 %31, i32* %2, align 4
  br label %42

32:                                               ; preds = %1
  %33 = load i32, i32* %5, align 4
  %34 = load i32, i32* @ZFCP_STATUS_PORT_PHYS_OPEN, align 4
  %35 = and i32 %33, %34
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %39, label %37

37:                                               ; preds = %32
  %38 = load i32, i32* @ZFCP_ERP_SUCCEEDED, align 4
  store i32 %38, i32* %2, align 4
  br label %42

39:                                               ; preds = %32
  br label %40

40:                                               ; preds = %39, %1
  %41 = load i32, i32* @ZFCP_ERP_FAILED, align 4
  store i32 %41, i32* %2, align 4
  br label %42

42:                                               ; preds = %40, %37, %30, %27
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @zfcp_erp_port_strategy_clearstati(%struct.zfcp_port*) #1

declare dso_local i32 @zfcp_erp_port_forced_strategy_close(%struct.zfcp_erp_action*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
